configuration build/start scripts

--- a/packages/yenote-app-client/index.html
+++ b/packages/yenote-app-client/index.html
@@ -10,18 +10,18 @@
 <body>
 <h1>Page under development</h1>
 <script>
-    if ("serviceWorker" in navigator) {
-        window.addEventListener("load", () => {
-            navigator.serviceWorker
-                .register("service-worker.js")
-                .then((registration) => {
-                    console.log("Service Worker registered: ", registration);
-                })
-                .catch((registrationError) => {
-                    console.error("Service Worker registration failed: ", registrationError);
-                });
-        });
-    }
+    // if ("serviceWorker" in navigator) {
+    //     window.addEventListener("load", () => {
+    //         navigator.serviceWorker
+    //             .register("/service-worker.js")
+    //             .then((registration) => {
+    //                 console.log("Service Worker registered: ", registration);
+    //             })
+    //             .catch((registrationError) => {
+    //                 console.error("Service Worker registration failed: ", registrationError);
+    //             });
+    //     });
+    // }
 </script>
 </body>
 </html>
